--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 header {
     display: flex;
     color: #FFFFFF;
+    -webkit-text-stroke: #5A3A81;
     font-size: 20px;
     margin: 10px;
     justify-content: center;
@@ -19,7 +20,7 @@ header {
 main {
     display: grid;
     flex-direction: column;
-    grid-template-columns: 3fr 1fr 1fr;
+    grid-template-columns: 3fr 2fr 1fr;
 }
 
 div {
@@ -33,6 +34,7 @@ div {
     flex-direction: row;
     justify-content: center;
     background-color: #5A3A81;
+    color: #926AC7;
 }
 
 .dealer {
@@ -43,10 +45,18 @@ div {
     
 }
 
+#middle {
+    display: grid;
+    flex-direction: column;
+    justify-content: center;
+    color: #5A3A81;
+}
+
 #right {
     display: grid;
     flex-wrap: wrap;
     flex-direction: column;
+    color: #5A3A81
 }
 
 button {
